QueryRunner and ServiceManager cleanup